# strutil-v2

./: CMakeLists.txt  main
include/: strutil.h
src/: main.c  strutil.c
tests/: main.c  test_strutil.c
